# world-cup-oracle

./: CHATGPT.md  CLAUDE.md  README.md
backend/: .env.example  Cargo.toml
backend/.sqlx/: query-0afc863fd7d8a861e94fa20b3e0dcb620295405a5e654a6cc95a4a8fb07556e1.json  query-3289849d4bee56b7e21a3a934ca60c6407b9444a873d9a53603c1bcded44861e.json  query-382970e2bbb6b23cebace7bd6def98b0171d35a3237e91712db055a77f9e3305.json  query-3a4079076938f2f6f6f42fea681e98cc60d98080f3bea9a67aeb279df2b4a16e.json  query-3d166b2986520d036428264d6ae2853968d2ea9231a17d7ddfbcaaae18ba8978.json  query-441275733746b9d5905973f7d3d7c601d4e3b2d7dc82910af1c47669b6601aad.json  query-4583d13c2fa65bdc39f3814b35c4838fc76667b15be52548d04e011afd1511a7.json  query-4dc6bd84ca85e1f87cf018e609840e703943ca02e209a5a48dd13d9d0dea6eae.json  query-4ebf73cd99381e79b2e5a10d614cd2c5d5197aa041c8db94304bba320bd065e3.json  query-52a23abfbfaa8734b530d5006c736c67a133964cdb83744766d2f041e2b48ab1.json  query-6f09d4b0685777e94108a12c4221436a1f401fe4779bf0b50f2187890dd926cb.json  query-79aea836134b27b45e1b7efbe9990ce057121e3e634f5c58a693cf5fed5efbe2.json  query-7fd3c3feae2f6c3b5d95c44b4bb1893d30d6881746906506d60ac4cc70f9be27.json  query-83f90278767d48122e69120e4a61c15bc40278cede0590c8e1db943a7b808d98.json  query-98ec4f7664eb4a3b128fdfe450d5408b6a0edde54850b5a3b0283bbc9ddae1a7.json  query-b1b7e8b84766f7341c27095c8527ea663e7c386cf92dff34c15e57ea94879a04.json  query-ba6da3261d70909981b3afd7634f0c41d3fead7127ae3768de54ce1546ca93ae.json  query-c10b49bf77cc746eba76b786013ddbb039d3e220ed6fb70261c92deb87280980.json  (+2 more)
backend/src/: db.rs  (+5 more)
(+54 files in other folders)
