[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
rand = "0.10.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
